--- a/deploy/local.yaml
+++ b/deploy/local.yaml
@@ -11,10 +11,12 @@ vault:
   tokenRepo:
     path: "/v1/secret/data/auth-api/tokens"
     astJwtSecretName: "astJwtSecret"
-  dpRedisSecret:
+  dcRedisSecret:
     path: "/v1/secret/data/auth-storer/redis"
-    dpRedisSecretName: dpRedisSecret
-    dpRedisUserName: dpRedisUser
+    dcRedisUserName: dcRedisUser
+    dcRedisSecretName: dcRedisSecret
+    acRedisUserName: acRedisUser
+    acRedisSecretName: acRedisSecret
 grpcServer:
   port: 4000
   maxPollTime: 10s
